# soa_ec_cpp

./: MERMAID_ALTERNATIVES.md  README.md  Thumbs.db  analyze_simulink_cpp.py  codedesc.m  exportCodeDescriptorToJSON.m  exportCodeMappingsToJSON.m  generate_docs.py  requirements.txt  run_cpp_analsysis.py  run_from_here.m  ~$doc.pptx
EPMatlabComponents/: createNewComponent.bat  ep_ec_cpp_wrapper_create.m  ep_ec_cpp_wrapper_create_impl.m  executeBuild.bat  executeClean.bat  executeTests.bat  pom.xml
EPMatlabComponents/ep.analysis.verdict.mscript.m/: pom.xml
EPMatlabComponents/ep.analysis.verdict.mscript.m/native/: pom.xml
EPMatlabComponents/ep.core.utils.m/: pom.xml
EPMatlabComponents/ep.core.utils.m/native/: pom.xml
EPMatlabComponents/ep.legacy.core.utils.m/: pom.xml
EPMatlabComponents/ep.legacy.core.utils.m/native/: pom.xml
EPMatlabComponents/ep.slmodel.analysis.ec.m/: pom.xml
EPMatlabComponents/ep.slmodel.analysis.ec.m/native/: pom.xml
EPMatlabComponents/ep.slmodel.analysis.m/: pom.xml
EPMatlabComponents/ep.slmodel.analysis.m/native/: pom.xml
EPMatlabComponents/ep.slmodel.analysis.tl.m/: pom.xml
EPMatlabComponents/ep.slmodel.analysis.tl.m/native/: pom.xml
EPMatlabComponents/ep.slmodel.import.ec.m/: pom.xml
EPMatlabComponents/ep.slmodel.import.ec.m/native/: pom.xml
EPMatlabComponents/ep.slmodel.import.sl.m/: pom.xml
EPMatlabComponents/ep.slmodel.import.sl.m/native/: pom.xml
EPMatlabComponents/ep.slmodel.m/: pom.xml
EPMatlabComponents/ep.slmodel.m/native/: pom.xml
EPMatlabComponents/ep.slmodel.openclose.m/: pom.xml
EPMatlabComponents/ep.slmodel.openclose.m/native/: pom.xml
EPMatlabComponents/ep.slmodel.simulation.m/: pom.xml
EPMatlabComponents/ep.slmodel.simulation.m/native/: pom.xml
EPMatlabComponents/ep.slmodel.test.utils.m/: pom.xml
EPMatlabComponents/ep.slmodel.test.utils.m/native/: pom.xml
EPMatlabComponents/ep.test.utils.m/: pom.xml
EPMatlabComponents/ep.test.utils.m/native/: pom.xml
EPMatlabComponents/releng/: pom.xml
EPMatlabComponents/releng/ep.matlabcomponents.matlab.parent/: pom.xml
EPMatlabComponents/releng/ep.matlabcomponents.reactor.parent/: pom.xml
docs/oMessage_model/: Doxyfile
docs/oMessage_model/html/: annotated.html  annotated_dup.js  class_component_namespace_1_1o_message___model-members.html  class_component_namespace_1_1o_message___model.html  class_component_namespace_1_1o_message___model.js  class_recv_data___input_data_interface_t-members.html  class_recv_data___input_data_interface_t.html  class_recv_data___input_data_interface_t__inherit__graph.map  class_recv_data___input_data_interface_t__inherit__graph.md5  classes.html  files.html  (+57 more)
models/example_cs_1/: BTC_vs_MQTester_Functional_Safety_Testing.docx  CodeModel.xml  SOA App Requirements Introduction.docx  SOA_demo_codegen.slx  W_client_SOA_demo_codegen.slx  W_client_SOA_demo_codegen.slx.bak  W_integ_SOA_demo_codegen.slx  Wrapper_SOA_demo_codegen.slx  init.asv  init.m  init_Wrapper_SOA_demo_codegen.m  mil_sil_profile.epp  mock_client.slx.autosave
models/example_cs_2/: DataDictionary.sldd  MilProfile.epp  New_Profile.epp  W_client_ClientServer_Model.slx  W_client_oClientServer_Model.slx  W_client_oClientServer_Model.slx.bak  W_integ_ClientServer_Model.slx  W_integ_ClientServer_Model.slxc  W_integ_oClientServer_Model.slx  W_integ_oClientServer_Model.slxc  W_server_ClientServer_Model.slx  W_server_mock_ClientServer_Model.slx  W_server_mock_ClientServer_Model.slxc  W_server_mock_oClientServer_Model.slx  W_server_mock_oClientServer_Model.slx.bak  W_server_mock_oClientServer_Model.slx.bak_001  W_server_mock_oClientServer_Model.slxc  W_server_oClientServer_Model.slx  W_server_oClientServer_Model.slx.bak  Wrapper_ClientServer_Model.sldd  Wrapper_ClientServer_Model.slx  Wrapper_ClientServer_Model.slxc  Wrapper_oClientServer_Model.sldd  Wrapper_oClientServer_Model.slx  Wrapper_oClientServer_Model.slx.bak  Wrapper_oClientServer_Model.slxc  codemapping.json  codemodel.xml  init.m  init_Wrapper_oClientServer_Model.m.bak  init_Wrapper_oClientServer_Model.m.bak_002  oClienServer_mil_profile.epp  oClienServer_milsil_merged_profile.epp  oClienServer_milsil_profile.epp  oClienServer_sil_profile.epp  oClientServer_Model.json  oClientServer_Model.slx  oClientServer_Model.slxc
models/message/: class_diagram.md  oMessage_Model.slx  oMessage_Model.slxc
models/messages/: Init.m  InitBuses.m  Model_cfg.m  Thumbs.db  codemodel.xml  epprofile.epp  messageModel.slx  messageModel.slxc  messages.slxc
models/messages/tests/: CMakeLists.txt  mock_interfaces.h  run_tests.bat  run_tests.sh  test_parameterized.cpp
models/signals/: Init.asv  codedesc.m  description.json  signal_dvPrivate_acMethod.json  signal_dvPrivate_acMethod.slx  signal_dvPrivate_acMethod.slx.original  signal_dvPrivate_acMethod.slxc
models/signals/class_diagram/: CMakeLists.txt  README_generator.md  generate_model_wrapper.py  model_test_wrapper copy.cpp  model_test_wrapper.cpp  model_test_wrapper.h  model_test_wrapper.h.bup  signal_analysis_class_diagram.mmd  signal_analysis_report.md  signal_model_structure.json  test_c_interface.c  test_example.cpp  test_generator.py
(+4702 files in other folders)
